--- a/public/home.html
+++ b/public/home.html
@@ -48,7 +48,20 @@
                                             <a href="#/bet/new">New</a>
                                         </li>
                                         <li>
-                                            <a href="#/bet/history">History</a>
+                                            <a href="#/bet/user-bets">My Bets</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a data-toggle="dropdown" class="dropdown-toogle pointer">Admin
+                                        <b class="caret"></b>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a href="#/match/new">Add Match</a>
+                                        </li>
+                                        <li>
+                                            <a href="#/bet/all">All Bets</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -70,5 +83,6 @@
 <script src="/scripts/angular/routes/routes.js"></script>
 <script src="/scripts/angular/factories/db-provider.js"></script>
 <script src="/scripts/angular/controllers/match-list.js"></script>
+<script src="/scripts/angular/controllers/bet.js"></script>
 
 </html>
